<resources>
    <string name="app_name">My Application</string>
    <string name="unit_converter_app">Unit Converter</string>
    <string name="enter_here_kilograms">Enter value in Kilogram</string>
    <string name="pounds">Value:</string>
    <string name="Pounds">Pounds(lb)</string>
    <string name="convert_to">Convert To</string>
    <string name="checkButton">Check Button is enabled</string>
    <string name="unCheckButton">Check Button is disabled</string>
    <string name="switchButton">Switch is enabled</string>
    <string name="unSwitchButton">Switch is disabled</string>
    <string name="activity_2">Activity 2</string>
</resources>